firewall.tf
resource "aws_security_group" "ingress-all" {
  name = "allow-all-sg"
  vpc_id = aws_vpc.VPN_attached_network.id
 
  ingress {
     cidr_blocks = [
       "0.0.0.0/0"
     ]
  from_port = 0
     to_port = 0
     protocol = "-1"
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  depends_on        = [
    aws_vpc.VPN_attached_network
  ]

}
